--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "discord.js": "^12.5.1"
    },
    "devDependencies": {
+      "@types/node": "^14.14.33",
       "typescript": "^4.2.3"
    }
 }
