--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
    "author": "Alexander Liu (autumnblazey)",
    "license": "AGPL-3.0-only",
    "main": "build/index.js",
-   "scripts": {},
-   "dependencies": {
-      "discord.js": "^12.5.1"
+   "scripts": {
+      "clean": "rm -rf build",
+      "build": "rm -rf build && tsc",
+      "start:dev": "NODE_ENV=development node -r source-map-support/register build",
+      "start": "NODE_ENV=production node -r source-map-support/register build"
    },
-   "devDependencies": {
-      "@types/node": "^14.14.33",
-      "typescript": "^4.2.3"
+   "dependencies": {
+      "@types/node": "~14.14.33",
+      "@types/ws": "^7.4.0",
+      "discord.js": "~12.5.1",
+      "dotenv": "~8.2.0",
+      "source-map-support": "^0.5.19",
+      "typescript": "~4.2.3"
    }
 }
