--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
       "start": "NODE_ENV=production node -r source-map-support/register build"
    },
    "dependencies": {
+      "@prisma/client": "^2.18.0",
       "@types/node": "~14.14.33",
       "@types/ws": "^7.4.0",
       "discord.js": "~12.5.1",
       "dotenv": "~8.2.0",
       "source-map-support": "^0.5.19",
       "typescript": "~4.2.3"
+   },
+   "devDependencies": {
+      "prisma": "^2.18.0"
    }
 }
