--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
       "@types/ws": "^7.4.0",
       "discord.js": "~12.5.1",
       "dotenv": "~8.2.0",
+      "prisma": "^2.18.0",
       "source-map-support": "^0.5.19",
       "typescript": "~4.2.3"
-   },
-   "devDependencies": {
-      "prisma": "^2.18.0"
    }
 }
