--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
       "prisma": "^2.18.0",
       "source-map-support": "^0.5.19",
       "typescript": "~4.2.3"
+   },
+   "devDependencies": {
+      "ts-prune": "^0.8.8"
    }
 }
